Bug 258784 - Fix for an issue while breaking out of an empty list item in case of nested lists
Summary: Fix for an issue while breaking out of an empty list item in case of nested l...
Status: RESOLVED FIXED
Alias: None
Product: WebKit
Classification: Unclassified
Component: HTML Editing (show other bugs)
Version: WebKit Nightly Build
Hardware: Unspecified Unspecified
: P2 Normal
Assignee: Nobody
URL: https://jsfiddle.net/21rmusfc/show
Keywords: InRadar
Depends on:
Blocks:
 
Reported: 2023-07-02 11:28 PDT by Ahmad Saleem
Modified: 2023-07-03 23:22 PDT (History)
2 users (show)

See Also:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Ahmad Saleem 2023-07-02 11:28:51 PDT
Hi Team,

While going through Blink's commit, I came across another failing test case, which we progress after merging below commit:

Commit: https://src.chromium.org/viewvc/blink?view=revision&revision=164049

We only fail '3rd' test from attached in the URL but Chrome Canary 117 passes all of them and Firefox Nightly 116 fails all (could be some 'assert_selection.js' thingy).

Just wanted to raise, so we can fix it.

Thanks!
Comment 1 EWS 2023-07-03 23:21:44 PDT
Committed 265747@main (484172ca1e49): <https://commits.webkit.org/265747@main>

Reviewed commits have been landed. Closing PR #15487 and removing active labels.
Comment 2 Radar WebKit Bug Importer 2023-07-03 23:22:17 PDT
<rdar://problem/111724381>